crates/glyph-cli/tests/corpus/invalid/case-violation/inconsistent_implicit_type.glyph
block first() -> LinkMode
    description: "Has a return."
    flow:
        return <"a link mode">

block second(x: Linkmode)
    description: "Re-uses the type with a drifted spelling."
    flow:
        return x
